template.yaml
---
# Source: httpbin/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  namespace: "test-ns"
  labels:
    app.kubernetes.io/name: httpbin
    app.kubernetes.io/instance: httpbin
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080

  selector:
    app.kubernetes.io/name: httpbin
    app.kubernetes.io/instance: httpbin
---
# Source: httpbin/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
  namespace: "test-ns"
  labels:
    app.kubernetes.io/name: httpbin
    app.kubernetes.io/instance: httpbin
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: httpbin
      app.kubernetes.io/instance: httpbin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: httpbin
        app.kubernetes.io/instance: httpbin
    spec:
      containers:
        - name: httpbin
          image: "ghcr.io/mccutchen/go-httpbin:2.18"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
---
# Source: httpbin/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin
  namespace: "test-ns"
  labels:
    app.kubernetes.io/name: httpbin
    app.kubernetes.io/instance: httpbin
spec:
  rules:
    - host: (tpl .Values.ingress.hostname .)
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: httpbin
                port:
                  number: 8080
